@@ -27,7 +27,8 @@ libport_sources = 				\
 	$(libport_srcdir)/program-name.cc	\
 	$(libport_srcdir)/symbol.cc		\
 	$(libport_srcdir)/sysexits.cc		\
-	$(libport_srcdir)/tokenizer.cc
+	$(libport_srcdir)/tokenizer.cc          \
+	$(libport_srcdir)/utime.cc
 
 # These are broken and someone will have to fix them...
 # libport_sources += 				\
